# to-dos-api-cpp

./: .clang-format  .clang-tidy  .dockerignore  .env.dev  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py  config.json  docker-compose.dev.yaml  docker-compose.yml  pgAdmin.json  to-dos-conan-profile.conf
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  link-conan-bins.sh  to-dos-conan-profile.conf
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: .reusable-docker-build-and-push.yml  build-and-push-devcontainer-image.yml  build.yml  e2e-tests-on-pull-request.yml  reusable-docker-build-and-push.yml
alembic/: alembic.ini
alembic/migrations/: env.py
alembic/models/: to_do.py
ci/: helmfile.yaml  values.yaml
docs/: article.md  odb-licenses.md  technologies.md
e2e/: KarateDockerfile  item-types-happy-path.feature  js-utils.js  to-dos-happy-path.feature
profiles/: to-dos-conan-profile-amd64.conf  to-dos-conan-profile-arm64.conf
scripts/: generate_odb_files.sh  test-concurrency.sh
src/: AppComponent.hpp  Handler.cpp  Handler.h  app-config.cpp  app-config.h  main.cpp  to-dos-api.cpp  to-dos-api.h
src/api/: CMakeLists.txt
src/api/features/to-dos/: to-dos-controller.cpp  to-dos-controller.h
src/api/features/todos/: todos-controller.cpp  todos-controller.h
src/application/: CMakeLists.txt  db_connection.cpp  db_connection.h
src/application/features/create-to-do/: create-to-do-command.cpp  create-to-do-command.h  create-to-do-handler.cpp  create-to-do-handler.h  create-to-do-request.h  create-to-do-response.h
src/application/features/get-all-to-dos/: get-all-to-dos-handler.cpp  get-all-to-dos-handler.h  get-all-to-dos-query.cpp  get-all-to-dos-query.h  get-all-to-dos-response.h
src/application/features/get-to-do-by-id/: get-to-do-by-id-handler.cpp  get-to-do-by-id-handler.h  get-to-do-by-id-query.cpp  get-to-do-by-id-query.h  get-to-do-by-id-response.h
src/application/features/hard-delete-to-do/: hard-delete-to-do-command.cpp  hard-delete-to-do-command.h  hard-delete-to-do-handler.cpp  hard-delete-to-do-handler.h
src/application/features/soft-delete-to-do/: soft-delete-to-do-command.cpp  soft-delete-to-do-command.h  soft-delete-to-do-handler.cpp  soft-delete-to-do-handler.h  soft-delete-to-do-response.h
src/application/odb-gen/: to-do-odb.cxx
src/application/shared-dtos/: to-do-dtos.cpp  to-do-dtos.h
src/auth/Authorization/: Authorization.cpp  Authorization.h
src/controller/: simple-controller.h
src/controller/ExampleController/: ExampleController.h
src/controller/Handler/: Handler.cpp  Handler.h
src/controllers/: app-controller.cpp  app-controller.h  simple-controller.cpp  simple-controller.h
src/core/: CMakeLists.txt  to-do.h
src/data/: alembic.ini  create_db.py  db_connection.cpp
src/data/commands/: todo-commands.cpp  todo-commands.h
src/data/migrations/: env.py
src/data/migrations/versions/: 280459679d89_initial_migration.py  4305af8cc1e9_initial_migration.py  d965e8c6dba1_init.py  e4bf8dd38292_initial_migration.py
src/data/models/: simple-model.cpp  simple-model.h  simple-model.xml  simple_model.py  to-do.h  to_do.py
src/data/models/odb-gen/: to-do-odb.cxx  to-do-odb.hxx  to-do-odb.ixx
src/data/queries/: todo-queries.cpp  todo-queries.h  todo-query.cpp  todo-query.h
src/dto/: DTOs.hpp
src/filters/: auth-filter.cpp  auth-filter.h
src/lib/RouterInterceptor/: RouterInterceptor.cpp  RouterInterceptor.h
src/middlewares/: header-middleware.cpp  header-middleware.h
src/migrations/: CMakeLists.txt  main.cpp
src/models/: Tasks.cpp  Tasks.h  Users.cpp  Users.h  model.json
src/models/Customers/: Customers.cpp  Customers.h
src/scripts/: test_concurrency.sh
src/services/: to-dos.service.cpp  to-dos.service.h
src/services/dtos/: to-dos-dto.cpp  to-dos-dto.h
src/utils/app-config/: app-config.cpp  app-config.h
test/: CMakeLists.txt  addition-operation.h  test_main.cpp
test_package/: conanfile.py
tests/e2e/: KarateDockerfile  item-types-happy-path.feature
tests/unit/: addition-operation.cpp
unit/: addition-operation.h
